fixed overflow

--- a/chip-8-webpage/styles/style.css
+++ b/chip-8-webpage/styles/style.css
@@ -330,6 +330,7 @@ input[type=checkbox] {
 	box-shadow: 5px 7px #dbdbdb;
 	padding: 0 0 2%;
 	width: 30%;
+	min-width: 350px;
 	margin-left: auto;
 	margin-right: auto;
 }
